get favorites characters from user endpoint implementation
